b=726443 rework last event time calculation to avoid problems with gtk_get_current_event_time in nested loops r=roc

--HG--
extra : rebase_source : 151b60b10944ccf3ccee0cb69f89728ba1c29977