widget/gtk2/nsWindow.h
@@ -192,11 +192,10 @@ public:
     NS_IMETHOD         HideWindowChrome(bool aShouldHide);
 
     /**
-     * GetCurrentEventTime guesses a timestamp for the most recent user input
-     * event (when the event is not available).  This is intended for pointer
-     * grab or focus requests, for example.
+     * GetLastUserInputTime returns a timestamp for the most recent user input
+     * event.  This is intended for pointer grab requests (including drags).
      */
-    static guint32     GetCurrentEventTime();
+    static guint32     GetLastUserInputTime();
 
     // utility method, -1 if no change should be made, otherwise returns a
     // value that can be passed to gdk_window_set_decorations
